<resources>
    <string name="app_name">Strudlana</string>
    <string name="u_bazu">U Bazu</string>
    <string name="manifest">Manifest</string>
    <string name="strudla">Strudla</string>
    <string name="info">Info</string>
    <string name="podesavanja">Podesavanja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dodaj_prodaj">&#x2795;Dodaj/Prodaj&#8722;</string>
    <string name="zakljucano">[ZAKLJUČANO]</string>
    <string name="mlekoNaslov">Mleko:</string>
    <string name="kvasacNaslov">Kvasac:</string>
    <string name="nadevMakNaslov">Nadev mak:</string>
    <string name="secerNaslov">Sećer:</string>
    <string name="nadevOrasiNaslov">Nadev orasi:</string>
    <string name="nadevKremNaslov">Nadev krem:</string>
    <string name="nadevVisnjaNaslov">Nadev višnja:</string>
    <string name="fr_button_napraviStrudle">Napravi Strudle 🍩</string>
    <string name="fr_button_prodajMusterija">Prodaj-musterija😀</string>
    <string name="fr_button_prodajPijaca">Prodaj-Pijaca🍅</string>
    <string name="izvestaj">📊Izvestaj📊</string>
    <string name="napraviIzvestaj">Napravi Izvestaj📰</string>
    <string name="povuciInfo">i+ℹ️</string>
    <string name="novoStanje">Novo Stanje✅</string>
    <string name="informacijeLager">ℹ️Informacije-Lagerℹ️</string>
    <string name="strudle">Štrudle</string>
    <string name="sirovine">Sirovine</string>
    <string name="makNaslov">Mak:</string>
    <string name="orasiNaslov">Orasi:</string>
    <string name="visnjaNaslov">Višnja:</string>
    <string name="cokoVisnjaNslov">ČokoVišnja;</string>
    <string name="makVrednost">[ZAKLJUČANO]</string>
    <string name="rogacNaslov">Rogač:</string>
    <string name="jabukaNaslov">Jabuka:</string>
    <string name="brasnoNaslov">Brašno:</string>
    <string name="bgpicture">bgPicture</string>
    <string name="podesavanjaNaslov">⚙Podesavanja⚙</string>
    <string name="podesavanjeCenaCele">Cena cele:</string>
    <string name="vrednost">[VREDNOST]</string>
    <string name="novaCena">Nova cena</string>
    <string name="cenaPola">Cena pola:</string>
    <string name="postaviCenaTekst">Postavi</string>
    <string name="cenaBrasnoNaslov">Cena brašno:</string>
    <string name="cenaKvasacNaslov">Cena kvasac:</string>
    <string name="fr_pod_nadevMak">Nadev mak:</string>
    <string name="fr_pod_secer">Cena secer:</string>
    <string name="naslovManifestacije">🎆Manifestacije🎆</string>
    <string name="prodatoNaslov">Prodato:</string>
    <string name="datum_pocetka_mItem">Datum početka:</string>
    <string name="datum_kraja_mItem">Datum kraja:</string>
    <string name="mak_mItem">Mak:</string>
    <string name="orasi_mItem">Orasi:</string>
    <string name="visnja_mItem">Višnja:</string>
    <string name="coko_visnja_mItem">Čoko višnja:</string>
    <string name="jabuka_mItem">Jabuka:</string>
    <string name="rogac_mItem">Rogač:</string>
    <string name="ostalo_mItem">Ostalo:</string>
    <string name="dodajmanifestaciju">dodajManifestaciju</string>
    <string name="nova_manifestacija">🆕Nova manifestacija🆕</string>
    <string name="naziv_manifestacijeNaslov">Naziv manifestacije:</string>
    <string name="lokacijaNaslov">Lokacija:</string>
    <string name="novaMan_datumPocetka">Datum početka:</string>
    <string name="novaMan_datumKraja">Datum kraja:</string>
    <string name="novaMan_unesiNaziv">Unesi naziv</string>
    <string name="novaMan_izaberiDatum">Izaberi datum</string>
    <string name="ididalje">idiDalje</string>
    <string name="proveripozadina">proveriPozadina</string>
    <string name="proveri_sve_informacije">Proveri sve informacije</string>
    <string name="razmak"> - </string>
    <string name="proveri_objasnjenje">Ukoliko neka informacija nije onakva kakvu si očekivao, vrati se na taj prozor i promeni ju.\n\nSledeće informacije će biti upisane u bazu:</string>
    <string name="novaMan_pomocString">Uneti i cele i polovine,razdvojiti crticom. Format unošenja [komada/cena celih]-[komada/cena polovina]. Npr. 100-50 za komade odnosno 600-350 za cene.</string>
    <string name="strudle_po_manifestacijama">Strudle po manifestacijama</string>
    <string name="studlePoManTextView">TextView</string>
    <string name="sirovineNaslov">🏭Sirovine🏭</string>
    <string name="dodaj_sirovine">Dodaj sirovine🍞</string>
    <string name="novo_stanje_sirovina">Novo stanje sirovina🆕</string>
    <string name="naslovManPrikaz">Naslov</string>
    <string name="stanje_prodatoManPrikaz">Stanje-Prodato</string>
    <string name="makManPrikaz">Mak:</string>
    <string name="orasiManPrikaz">Orasi:</string>
    <string name="vi_njaManPrikaz">Višnja:</string>
    <string name="cvManPrikaz">ČV:</string>
    <string name="jabukaManPrikaz">Jabuka:</string>
    <string name="rogacManPrikaz">Rogač:</string>
    <string name="pazarManPrikaz">Pazar:</string>
    <string name="todo">TODO</string>
    <string name="zavr_iManPrikaz">Završi</string>
    <string name="zagu_valo_seManPrikaz">Zagužvalo se</string>
    <string name="noveStrudle">🥐Nove štrudle🥐</string>
    <string name="napStrudleMak">⚫Mak:</string>
    <string name="napStrudleorasi">🌰Orasi:</string>
    <string name="napStrudlevi_nja">🍒Višnja:</string>
    <string name="napStrudleCokoVisnja">🍫Čoko višnja:</string>
    <string name="napStrudlejabuka">🍎Jabuka:</string>
    <string name="napStrudlerogac">🟤Rogač:</string>
    <string name="napStrudlecheckBoxText">Praviš za manifestaciju?</string>
    <string name="napStrudlenapraviDugmeText">Napravi✅</string>
    <string name="prodajNaPijacu">🍅Prodaj na pijaca🍅</string>
    <string name="imePijacara">Ime pijačara:</string>
    <string name="unesiImePijacara">Unesi ime pijačara</string>
    <string name="operacija">Operacija:</string>
    <string name="dodajSirovine_naslov">🏭Dodaj sirovine🏭</string>
</resources>